# Gateway3D

./: CMakeLists.txt  LICENSE  README.md
GameData/Materials/: BlueSphere.material  Box.material  Floor.material  MyPostProcess.material
GameData/Models/: Box.glb.import  Box.model  Monkey.glb  Monkey.glb.import  Monkey.model  Plane.glb  Plane.glb.import  Plane.model  Sphere.glb  Sphere.glb.import  Sphere.model
GameData/Shaders/: Cube.shader  Floor.shader  MyPostProcess.shader  Sphere.shader
GameData/Shaders/Code/PostProcess/: MyPostProcess.shadercode
GameData/Shaders/Code/PostProcess/GLSL/: MyPostProcess.frag
GameData/Shaders/Code/Surface/: Cube.shadercode  Floor.shadercode  Sphere.shadercode
GameData/Shaders/Code/Surface/GLSL/: Cube.frag  Cube.vert  Floor.frag  Sphere.frag
GameData/Shaders/Domains/PostProcess/: PostProcess.shaderdomain
GameData/Shaders/Domains/PostProcess/GLSL/: PostProcess.frag  PostProcess.vert
GameData/Shaders/Domains/Surface/: PBR.shaderdomain
GameData/Shaders/Domains/Surface/GLSL/: PBR.frag  PBR.vert
GameData/Textures/Bricks/064/: BaseColor.texture  Displacement.texture  Normal.texture  Roughness.texture
GameData/Textures/Concrete/042C/: BaseColor.texture  Displacement.texture  Metallic.texture  Normal.texture  Roughness.texture
GameData/Textures/Marble/016/: BaseColor.texture  Roughness.texture
GameData/Textures/Rocks/022/: BaseColor.texture  Displacement.texture  Normal.texture  Roughness.texture
GameData/Textures/RoofingTiles/006/: BaseColor.texture  Displacement.texture  Normal.texture  Roughness.texture
GameData/Textures/RustyMetal/022/: BaseColor.jpg.import  BaseColor.texture  Displacement.jpg.import  Displacement.texture  Metallic.jpg.import  Metallic.texture  Normal.jpg.import  Normal.texture  Roughness.jpg.import  Roughness.texture
GameData/Textures/Wood/007/: BaseColor.texture  Roughness.texture
GameData/UI/: test.rml
GameData/Worlds/: MyWorld_01.world  MyWorld_02.world
Logo/: splash.blend  splash.blend1
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt  main.cpp
Source/Examples/: CMakeLists.txt  HelloCube.cpp  HelloMultiModelInstance.cpp  HelloMultipleWindows.cpp  HelloScene.cpp  HelloSceneLoading.cpp  HelloSplashScreen.cpp  HelloWindow.cpp
Source/Gateway/: AmbientLight.cpp  AmbientLight.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  Device.cpp  Device.h  DirectionalLight.cpp  DirectionalLight.h  Display.cpp  Display.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  Gateway3D.h  Graphics.cpp  Graphics.h  InputState.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Mat4.cpp  Mat4.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  Mouse.cpp  Mouse.h  MultiModelInstance.cpp  (+52 more)
